@@ -287,45 +287,3 @@ class SolrMaintenanceView(BrowserView):
         msg = msg % (processed, real.next(), cpu.next())
         log(msg)
         logger.info(msg)
-
-    def catalogSync(self, index, batch=1000):
-        """ add or sync a single solr index using data from the portal
-            catalog;  existing data in solr will be overwritten for the
-            given index """
-        manager = queryUtility(ISolrConnectionManager)
-        manager.setTimeout(None, lock=True) # don't time out during reindexing
-        log = self.mklog()
-        log('getting data for "%s" from portal catalog...\n' % index)
-        key = manager.getSchema().uniqueKey
-        data = self.metadata(index, key=key)
-        log('syncing "%s" from portal catalog to solr...\n' % index)
-        real = timer()          # real time
-        lap = timer()           # real lap time (for intermediate commits)
-        cpu = timer(clock)      # cpu time
-        processed = 0
-        conn = manager.getConnection()
-        updates = {}            # list to hold data to be updated
-        def checkPoint():
-            uids = updates.keys()
-            flares = solrDataFor(uids)
-            for uid, value in updates.items():
-                flare = flares.get(uid, {key: uid})
-                flare[index] = value
-                conn.add(**flare)
-            updates.clear()     # clear pending updates
-            log('intermediate commit (%d items processed, '
-                'last batch in %s)...\n' % (processed, lap.next()))
-            conn.commit()
-            manager.getConnection().reset()     # force new connection
-        cpi = checkpointIterator(checkPoint, batch)
-        for uid, value in data.items():
-            updates[uid] = value
-            processed += 1
-            cpi.next()
-        checkPoint()            # make sure to process the last batch
-        manager.setTimeout(None, lock=False)    # reset the timeout lock
-        log('portal catalog data synced.\n')
-        msg = 'processed %d items in %s (%s cpu time).'
-        msg = msg % (processed, real.next(), cpu.next())
-        log(msg)
-        logger.info(msg)
